added home page to Codsoft

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         <ul id="taskList"></ul>
     </div>
     <script src="script.js"></script>
+
+    <footer> ©️ Bankole Ebenezer</footer>
 </body>
 </html>
